// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTabBar Snap render AtTabBar -- props backgroundColor 1`] = `
<div
  class="at-tab-bar"
  style="background-color: red;"
/>
`;

exports[`AtTabBar Snap render AtTabBar -- props className 1`] = `
<div
  class="at-tab-bar test"
/>
`;

exports[`AtTabBar Snap render AtTabBar -- props color 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
    style="color: red;"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
          style="color: red;"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
    style="color: red;"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
          style="color: red;"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
    style="color: red;"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render AtTabBar -- props current 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render AtTabBar -- props customStyle 1`] = `
<div
  class="at-tab-bar"
  style="color: red;"
/>
`;

exports[`AtTabBar Snap render AtTabBar -- props fixed 1`] = `
<div
  class="at-tab-bar at-tab-bar--fixed"
/>
`;

exports[`AtTabBar Snap render AtTabBar -- props fontSize 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
          style="font-size: 26px;"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
          style="font-size: 26px;"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
          style="font-size: 26px;"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
          style="font-size: 26px;"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render AtTabBar -- props iconSize 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
          style="font-size: 26px;"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
          style="font-size: 26px;"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
          style="font-size: 26px;"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
          style="width: 26px; height: 26px;"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
          style="width: 26px; height: 26px;"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render AtTabBar -- props scroll 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render AtTabBar -- props selectedColor 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
    style="color: red;"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
          style="color: red;"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render AtTabBar -- props tabList 1`] = `
<div
  class="at-tab-bar"
>
  <div
    class="at-tab-bar__item at-tab-bar__item--active"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-bullet-list"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          待办事项
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-camera"
        />
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          拍照
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <span
          class="at-icon at-icon-folder"
        />
      </div>
      <div
        class="at-badge__num"
      >
        99+
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          文件夹
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-tab-bar__item"
  >
    <div
      class="at-badge"
    >
      <div
        class="at-tab-bar__icon"
      >
        <img
          class="at-tab-bar__inner-img at-tab-bar__inner-img--inactive"
          src="https://img14.360buyimg.com/jdphoto/s72x72_jfs/t17251/336/1311038817/3177/72595a07/5ac44618Na1db7b09.png"
        />
        <img
          class="at-tab-bar__inner-img"
          src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
        />
      </div>
      <div
        class="at-badge__num"
      >
        new
      </div>
    </div>
    <div>
      <div
        class="at-badge"
      >
        <div
          class="at-tab-bar__title"
        >
          领取中心
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtTabBar Snap render initial AtTabBar 1`] = `
<div
  class="at-tab-bar"
/>
`;
